2007-03-07  Andreas Kupries  <andreask@activestate.com>

	* compiler_peg_mecpu.tcl: Fixed typo in name of required package
	* pkgIndex.tcl:           ('gasm;, was incorrectly 'gas'). Bumped
	                          to version 0.1.1.

2006-10-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.9 ========================
	* 

2006-09-19  Andreas Kupries  <andreask@activestate.com>

	* pkgIndex.tcl: Bumped version to 0.2
	* pluginmgr.tcl:

2006-06-30  Andreas Kupries  <akupries@shaw.ca>

	* compiler_peg_mecpu.tcl: New packages generating ME
	* gen_peg_mecpu.tcl:      instructions for the CPU(core).
	* gen_peg_mecpu.template: And page plugins using them.
	* plugins/pkgIndex.tcl:
	* plugins/transform_mecpu.tcl:
	* plugins/writer_mecpu.tcl:
	* pkgIndex.tcl:

	* pluginmgr.tcl: Extended the page plugin environment with
	  commands allowing a plugin to write files. Intended for the
	  debugging of plugins, i.e. the dumping of internal state. The
	  destination for such files however are restricted to the current
	  working directory and its sub-directories. Currently only the
	  MEcpu compiler package has code to use this, to write the
	  intermediary graphs and some statistics (Disabled through
	  comments however).

2006-01-11  Andreas Kupries <andreask@activestate.com>

	* util_norm_peg.tcl:           Inserted pragmas for the MDgen
	* util_norm_lemon.tcl:         application hinting that the
	* gen_peg_me.tcl:              pseudo-package 'page::plugin'
	* analysis_peg_emodes.tcl:     is not a true dependency.
	* analysis_peg_minimize.tcl:
	* analysis_peg_realizable.tcl:
	* analysis_peg_reachable.tcl:

	* analysis_peg_minimize.tcl: Changed bad reference to 'useful' to
	  the correct string, 'realizable'.

2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.8 ========================
	* 

2005-09-28  Andreas Kupries <andreask@activestate.com>
