@@ -18,7 +18,7 @@ package ifneeded page::reader::treeser 0.1 [list source [file join $dir reader_t
 
 package ifneeded page::writer::null     0.1 [list source [file join $dir writer_null.tcl]]
 package ifneeded page::writer::me       0.1 [list source [file join $dir writer_me.tcl]]
-package ifneeded page::writer::mecpu    0.1 [list source [file join $dir writer_mecpu.tcl]]
+package ifneeded page::writer::mecpu    0.1.1 [list source [file join $dir writer_mecpu.tcl]]
 package ifneeded page::writer::tree     0.1 [list source [file join $dir writer_tree.tcl]]
 package ifneeded page::writer::tpc      0.1 [list source [file join $dir writer_tpc.tcl]]
 package ifneeded page::writer::hb       0.1 [list source [file join $dir writer_hb.tcl]]
